--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,99 @@
+/* Importing Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+/* Initializing Tailwind */
 @import "tailwindcss";
+
+/* Custom Tailwind */
+@theme {
+  /* Custom Fonts */
+  --font-poppins: Poppins, "sans-serif";
+
+  /* Custom Color */
+  --color-custom-300: #eeeeee;
+  --color-custom-400: #e0e0e0;
+  --color-custom-600: #9e9e9e;
+  --color-custom-900: #424242;
+  --color-custom-1000: #212121;
+}
+
+* {
+  transition: 0.5s;
+  scroll-behavior: smooth;
+}
+
+html,
+body {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+  @apply bg-white text-custom-1000 font-poppins;
+}
+
+::selection {
+  @apply bg-custom-1000 text-white;
+}
+
+@utility flex-Center {
+  @apply flex justify-center items-center;
+}
+
+@utility flex-Between {
+  @apply flex justify-between items-center;
+}
+
+@layer Components {
+  footer {
+    @apply h-fit w-full py-14 sm:py-20 px-6 sm:px-20 bg-custom-1000 text-white gap-12 flex flex-col justify-center;
+
+    .footer-Upper {
+      @apply h-fit w-full grid grid-cols-1 lg:grid-cols-2 gap-12;
+
+      .upperLeft-Footer {
+        @apply h-fit w-full flex gap-6 flex-col;
+
+        .upperLeft-Text {
+          @apply h-fit w-full flex flex-col justify-start items-start gap-2;
+
+          p {
+            @apply h-fit w-[80%] lg:max-w-[350px] font-medium text-sm text-custom-400;
+          }
+        }
+
+        .upperLeft-Icons {
+          @apply h-fit w-fit flex-Center gap-4 text-xl text-custom-300;
+
+          i {
+            @apply hover:text-white cursor-pointer;
+          }
+        }
+      }
+
+      .upperRight-Footer {
+        @apply h-fit w-full grid  grid-cols-2 md:grid-cols-4 gap-6;
+
+        .upperRight-Links {
+          @apply h-fit w-full  flex flex-col gap-6;
+
+          h1 {
+            @apply font-semibold text-base md:text-lg text-white;
+          }
+
+          .link-Map {
+            @apply h-fit w-fit flex flex-col gap-3;
+
+            a {
+              @apply h-fit w-fit text-sm md:text-sm font-medium cursor-pointer text-custom-300 hover:text-white;
+            }
+          }
+        }
+      }
+    }
+
+    .footer-Divider {
+      @apply border-custom-900;
+    }
+    .footer-Lower {
+      @apply h-fit w-full flex-Between text-custom-600 text-sm lg:text-base flex-col sm:flex-row gap-4;
+    }
+  }
+}
