--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,13 @@
   --color-custom-300: #eeeeee;
   --color-custom-400: #e0e0e0;
   --color-custom-600: #9e9e9e;
+  --color-custom-800: #616161;
   --color-custom-900: #424242;
   --color-custom-1000: #212121;
+}
+
+* {
+  transition: 0.5s;
 }
 
 html,
@@ -36,6 +41,35 @@ body {
 }
 
 @layer Components {
+  .FAQs {
+    @apply h-fit w-full  py-14 sm:py-20 px-6 sm:px-20 flex-Center flex-col gap-12 md:gap-16;
+
+    .faq-Heading {
+      @apply h-fit w-full flex-Between;
+
+      h1 {
+        @apply h-fit w-fit font-bold text-2xl md:text-3xl text-custom-900;
+      }
+      button {
+        @apply h-fit w-fit font-medium text-sm md:text-base text-custom-900 border px-4 py-2 md:px-5 md:py-2.5 rounded-2xl border-custom-600 cursor-pointer flex-Center;
+      }
+    }
+
+    .faq-Content {
+      @apply h-fit w-full flex-Center flex-col gap-4;
+
+      .faq-Box {
+        @apply h-fit w-full flex flex-col gap-2 justify-center items-center;
+
+        .faq-Question {
+          @apply h-fit w-full flex-Between px-6 sm:px-8 py-5  text-sm sm:text-base text-custom-800 rounded-2xl font-medium border cursor-pointer border-custom-400;
+        }
+        .faq-Answer {
+          @apply h-fit w-full flex-Between px-6 sm:px-8 py-5  text-sm sm:text-base text-custom-800 rounded-2xl font-medium border cursor-pointer border-custom-400;
+        }
+      }
+    }
+  }
 
   .subscribe {
     @apply h-fit w-full py-16 sm:py-20 px-6 sm:px-20 text-white flex-Center;
