--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   --font-poppins: Poppins, "sans-serif";
 
   /* Custom Color */
+  --color-custom-200: #f5f5f5;
   --color-custom-300: #eeeeee;
   --color-custom-400: #e0e0e0;
   --color-custom-600: #9e9e9e;
@@ -41,6 +42,48 @@ body {
 }
 
 @layer Components {
+  .Wonders {
+    @apply h-fit w-full  py-14 sm:py-20 px-6 sm:px-20 flex-Center flex-col gap-12 md:gap-16;
+
+    .wonders-Heading {
+      @apply h-fit w-full flex-Between;
+
+      h1 {
+        @apply h-fit w-fit font-bold text-2xl md:text-3xl text-custom-900;
+      }
+      button {
+        @apply h-fit w-fit font-medium text-sm md:text-base text-custom-900 border px-4 py-2 md:px-5 md:py-2.5 rounded-2xl border-custom-600 cursor-pointer flex-Center;
+      }
+    }
+
+    .wonders-Content {
+      @apply h-fit w-full gap-8 grid grid-cols-1 sm:grid-cols-2;
+
+      .wonders-Card {
+        @apply h-fit w-full flex flex-col gap-4;
+
+        img {
+          @apply h-auto w-full bg-cover rounded-4xl;
+        }
+        .wonders-Text {
+          @apply h-fit w-full flex flex-col gap-2;
+
+          h1 {
+            @apply h-fit w-full text-custom-800 font-bold text-lg sm:text-xl;
+          }
+
+          div {
+            @apply h-fit w-full flex gap-2;
+
+            span {
+              @apply h-fit w-fit font-medium text-xs py-2 px-4 rounded-xl bg-custom-200 text-custom-800;
+            }
+          }
+        }
+      }
+    }
+  }
+
   .FAQs {
     @apply h-fit w-full  py-14 sm:py-20 px-6 sm:px-20 flex-Center flex-col gap-12 md:gap-16;
 
