--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ body {
       @apply h-fit w-full flex-Between;
 
       h1 {
-        @apply h-fit w-fit font-bold text-2xl md:text-3xl text-custom-900;
+        @apply h-fit w-fit font-bold text-xl md:text-3xl text-custom-900;
       }
       button {
         @apply h-fit w-fit font-medium text-sm md:text-base text-custom-900 border px-4 py-2 md:px-5 md:py-2.5 rounded-2xl border-custom-600 cursor-pointer flex-Center;
@@ -91,7 +91,7 @@ body {
       @apply h-fit w-full flex-Between;
 
       h1 {
-        @apply h-fit w-fit font-bold text-2xl md:text-3xl text-custom-900;
+        @apply h-fit w-fit font-bold text-xl md:text-3xl text-custom-900;
       }
       button {
         @apply h-fit w-fit font-medium text-sm md:text-base text-custom-900 border px-4 py-2 md:px-5 md:py-2.5 rounded-2xl border-custom-600 cursor-pointer flex-Center;
